log
ju.,  7 de sep. de 2023 16:29:55: 
 tests:  0|6
total_score: 0/70
029115d
ju.,  7 de sep. de 2023 16:54:19: 
 hashmap.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:58:5: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
     if(map = NULL)
     ^~
cc1.exe: all warnings being treated as errors
Compilation failed
25656b8
ju.,  7 de sep. de 2023 16:54:57: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
ab56b88
ju.,  7 de sep. de 2023 17:00:30: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function 'eraseMap':
hashmap.c:74:21: error: implicit declaration of function 'has' [-Werror=implicit-function-declaration]
     long posicion = has(key, map -> capacity);
                     ^~~
hashmap.c:74:10: error: unused variable 'posicion' [-Werror=unused-variable]
     long posicion = has(key, map -> capacity);
          ^~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
546c3fc
vi.,  8 de sep. de 2023 20:31:58: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function 'eraseMap':
hashmap.c:74:11: error: unused variable 'pair' [-Werror=unused-variable]
     Pair *pair = searchMap(map, key);
           ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
f1f42a7
vi.,  8 de sep. de 2023 20:33:39: 
 hashmap.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  1|5
total_score: 10/70
0b08a3a
vi.,  8 de sep. de 2023 20:41:53: 
 hashmap.c | 11 +++++++----
 1 file changed, 7 insertions(+), 4 deletions(-)
 tests:  1|5
total_score: 10/70
185bd7e
vi.,  8 de sep. de 2023 20:43:17: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:4:0:
hashmap.c: In function 'eraseMap':
hashmap.c:85:9: error: statement with no effect [-Werror=unused-value]
     map -> size;
     ~~~~^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
0a89e3f
vi.,  8 de sep. de 2023 20:43:45: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|4
total_score: 20/70
8cc9825
